--- a/app/src/main/res/layout/fragment_home_view.xml
+++ b/app/src/main/res/layout/fragment_home_view.xml
@@ -4,13 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <com.daemon.newsapp.view.NoScrollViewPager
         android:id="@+id/vp_home_pages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-    </android.support.v4.view.ViewPager>
+    </com.daemon.newsapp.view.NoScrollViewPager>
 
     <RadioGroup
         android:id="@+id/rg_content_buttons"
