完成从服务器获取json数据显示左侧菜单栏并缓存本地，初步实现获取新闻页签下的轮播图数据的获取

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.daemon.newsapp.activity.HomeActivity"
-    android:id="@+id/fl_home_menu_activity">
+    android:id="@+id/fl_home_menu_activity"
+    android:background="#ffffff">
 
 </FrameLayout>
